login signup working crateing recipe working deleting recipe in progress

--- a/blog/src/App.module.scss
+++ b/blog/src/App.module.scss
@@ -26,4 +26,12 @@
     }
 
 }
+@media(max-width:1024px) {
+    .navWrapper {
+        .divTitle{
+            font-size: 18px;
+
+        }
+    }
+}
 
