--- a/blog/src/App.module.scss
+++ b/blog/src/App.module.scss
@@ -6,6 +6,7 @@
     justify-content: flex-end;
     align-items: center;
     position:fixed;
+ 
     .divTitle {
         text-align: center;
         font-size: 24px;
@@ -18,6 +19,7 @@
         justify-content: flex-end;
         align-items: center;
         list-style-type: none;
+        margin-right: 70px;
        
     }
     li {
@@ -30,6 +32,10 @@
     .navWrapper {
         .divTitle{
             font-size: 18px;
+
+        }
+        ul {
+            margin-right: 10px;
 
         }
     }
