--- a/blog/src/components/RecipeBox/recipebox.module.scss
+++ b/blog/src/components/RecipeBox/recipebox.module.scss
@@ -2,14 +2,12 @@
 .mainWrapper {
   //   background-color: red;
   border-radius: 15px;
-  min-width: 600px;
-  max-width:800px;
+width: 600px;
   min-height: 400px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.16);
   display: flex;
   flex-direction: column;
   background-color: $white;
-
   margin: 10px;
   .nameImageWrapper {
     position: relative;
@@ -110,5 +108,12 @@
     align-self: flex-end;
     margin-right: 15px;
     margin-bottom: 10px;
+  }
+}
+
+@media(max-width: 1024px){
+  .mainWrapper {
+   width: 350px;
+
   }
 }
