--- a/blog/src/components/RecipeViewer/RecipeViewer.module.scss
+++ b/blog/src/components/RecipeViewer/RecipeViewer.module.scss
@@ -3,6 +3,9 @@
   width: 100vw;
   min-height: calc(100vh - 55px);
   background-color: $mainbg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .mainWrapper {
     max-width: 1600px;
     margin: 0 auto;
